style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Arial', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f8f8f8;
  }

  .container {
    max-width: 600px;
    margin: 0 auto;
    padding: 20px;
    background-color: #11AC47;
  }

  .header {
    text-align: center;
    margin-bottom: 20px;
    color: #11AC47;
    background-color: #ddd;
    padding: 2px 0px;
  }

  .header h1 {
    font-size: 2em;
  }

  .header p {
    font-size: 1.2em;
  }

  .prizes {
    text-align: center; /* Center the content */
  }

  .prizes img {
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    max-width: 100%;
    width: 100%;
    margin: 0 auto; /* Center the image */
    animation: bounce 1s infinite alternate;
  }

  .how-to-participate {
    margin-bottom: 20px;
    color: black;
  }

  .how-to-participate h2 {
    font-size: 2em;
    text-align: center;
  }

  .step {
    margin-bottom: 20px;
    text-align: center;
    background-color: #FECD06;
    padding-top: 5px;
    padding-bottom: 5px;
  }

  .step h3 {
    font-size: 1.3em;
    color: #333;
  }

  .step p {
    font-size: 1em;
    color: #11AC47;
  }

  .winners {
    text-align: center;
  }

  .winners h2 {
    font-size: 1.5em;
    color: #FECD06;
  }

  table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 10px;
  }

  th, td {
    border: 1px solid #ddd;
    padding: 8px;
  }

  th {
    background-color: #FECD06;
  }

  .footer {
    text-align: center;
    margin-top: 20px;
    color: #555;
  }

  @keyframes bounce {
    0%, 100% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-10px);
    }
  }

  /* Signup Form Styles */
  .signup-form {
    text-align: center;
    display: flex;
    flex-direction: column;
    text-decoration: none;
  }

  .signup-form label {
    display: block;
    margin-bottom: 5px;
  }

  .signup-form input {
    width: 80%;
    padding: 8px;
    align-self: center;
    margin-bottom: 10px;
  }
  .signup-form button {
    background-color: #11AC47;
    text-decoration: none;
    color: #fff;
    align-self: center;
    margin-top: 5px;
    padding: 10px;
    border: none;
    cursor: pointer;
    width: 20%;
    font-size: 1em;
  }

  .signup-form button:hover {
    background-color: #0d8b3b;
  }

